Bug 1370345 - Create JS bytecode mime type based on the platform BuildID instead of MOZ_BUILDID macro. r=mrbkap